<resources>
    <string name="app_name">Lab1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Hello World!</string>

    <string name="second_fragment_label">Second Fragment</string>

    <string name="third_fragment_label">Third Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="editTextHint">Enter info</string>
    <string name="add">Add</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="activeUser">Active User</string>
    <string name="viewAll">View all</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>